<resources>
    <string name="app_name">MyMessApp</string>
    <string name="splashName">IIT BBS MESS</string>
    <string name="intro_content_description">This is the Mess app Intro page</string>
    <string name="starting_string">Hungry!! LETS EAT</string>
    <string name="intro_info">App For Students to manage Mess Food and Prices.</string>
    <string name="intro_signup">SIGN UP</string>
    <string name="intro_login">LOG IN</string>
    <string name="admin_btn">ADMIN</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_outmenu">Sign Out</string>
    <string name="hint_name_edittext">Name</string>
    <string name="signup_hint_email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="week_menu">Menu</string>
    <string name="my_expenses">Monthly Expenses</string>
    <string name="my_balance">Balance</string>
</resources>