<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    
    >
    <item
        
        android:id="@+id/nav_my_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/my_profile"/>

    <item
        android:id="@+id/week_menu"
        android:icon="@drawable/ic_week_menu"
        android:title="@string/week_menu"/>

    <item
        android:id="@+id/balance"
        android:icon="@drawable/ic_balance"
        android:title="@string/my_balance"/>

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_history"
        android:title="@string/my_expenses"/>

    <item

        android:id="@+id/nav_sign_out"
        android:icon="@drawable/ic_sign_out"
        android:title="@string/sign_outmenu"/>

</menu>