<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MyProfileActivity"
    android:orientation="vertical"
    >
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/my_profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dark2"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CAC9C9"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/my_profile_screen_content_marginStartEnd"
            android:layout_marginEnd="@dimen/my_profile_screen_content_marginStartEnd"
            android:layout_marginTop="@dimen/my_profile_screen_content_marginTopBottom"
            android:layout_marginBottom="@dimen/my_profile_screen_content_marginTopBottom"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="@dimen/cardview_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:padding="@dimen/my_profile_screen_content_padding">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile_user_image"
                    android:layout_marginTop="@dimen/my_profile_name_til_marginTop"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/my_profile_user_image_size"
                    android:layout_height="@dimen/my_profile_user_image_size"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    android:src="@drawable/img"
                    android:layout_marginStart="@dimen/nav_content_margin_start"
                    android:layout_marginEnd="@dimen/nav_content_margin_start"
                    app:strokeWidth="@dimen/stroke_imagewidht"

                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_etname_ll"
                    android:layout_marginTop="@dimen/cardview_padding_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edittext_layout_margin"
                    android:layout_marginEnd="@dimen/edittext_layout_margin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/dark2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/secondary_text_color"
                        android:hint="@string/hint_name_edittext"
                        android:textSize="@dimen/input_edit_size_signup"
                        android:inputType="text"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/profile_user_emailLayout"
                    android:layout_marginTop="@dimen/cardview_padding_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edittext_layout_margin"
                    android:layout_marginEnd="@dimen/edittext_layout_margin"
                    android:textColorHint="@color/secondary_text_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/dark2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_user_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/secondary_text_color"
                        android:hint="@string/signup_hint_email"
                        android:textSize="@dimen/input_edit_size_signup"
                        android:inputType="text"
                        android:focusableInTouchMode="false"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_etpassword_ll"
                    android:layout_marginTop="@dimen/cardview_padding_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edittext_layout_margin"
                    android:layout_marginBottom="@dimen/edittext_layout_margin"
                    android:layout_marginEnd="@dimen/edittext_layout_margin"
                    android:outlineAmbientShadowColor="#A9A9A9"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxStrokeColor="@color/dark2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/profile_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:inputType="text"
                        android:textColorHint="@color/secondary_text_color"
                        android:textSize="@dimen/input_edit_size_signup" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/profile_update"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/button_margin_signup"
                    android:layout_marginTop="@dimen/button_margin_signup"
                    android:layout_marginEnd="@dimen/button_margin_signup"
                    android:layout_marginBottom="10sp"
                    android:background="@drawable/shape_button_rounded"
                    android:text="@string/update"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    tools:ignore="DuplicateSpeakableTextCheck" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>